--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -27,6 +27,28 @@
     margin: 0;
 }
 
+/* SCROLLBAR */
+
+
+::-webkit-scrollbar {
+    width: 15px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+    border-radius: 40px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #4e5254;
+    border-radius: 40px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #6f7172;
+}
+
+
 body {
     background: var(--first-color);
     min-height: 100vh;
@@ -48,7 +70,6 @@ header {
 header .logo {
     position: relative;
     font-weight: 700;
-    color: #fff;
     text-decoration: none;
     font-size: 2rem;
     text-transform: uppercase;
@@ -58,7 +79,7 @@ header .logo {
 
 header.stcky {
     padding: 5px 100px;
-    background: #fff;
+    background: var(--title-color);
 }
 
 header ul {
@@ -82,10 +103,13 @@ header ul li a {
     font-weight: 500px;
     transition: 0.6s;
     font-family: var(--body-font);
-    font-size:   var(--biggest-font-size);
-    text-transform: uppercase
+    font-size: var(--biggest-font-size);
+    text-transform: uppercase;
 }
 
+header ul li a:hover {
+    color: var(--title-color);
+}
 
 
 .banner {
@@ -103,22 +127,36 @@ header.sticky ul li a {
 
 /*=============== HOME ===============*/
 .home,
-.home__data{
-  position: absolute;
+.home__data {
+    position: absolute;
 }
 
 .home__title {
     position: absolute;
-    top: -485px;
+    top: -531px;
     left: 100px;
     width: 500px;
-    font-size: 60px;
+    font-size: 80px;
     color: var(--title-color);
     font-family: var(--body-font);
 }
 
 .home__title span {
-color: var(--text-color);
-font-family: var(--body-font-sub);
-font-size: 35px;
+    color: var(--text-color);
+    font-family: var(--body-font-sub);
+    font-size: 31px;
 }
+
+.home__description {
+    position: absolute;
+    color: var(--text-color);
+    font-family: 'Inter', bold;
+    font-size: 15px;
+    width: 387px;
+    left: 100px;
+    top: -350px;
+}
+
+
+
+
